# AmazonReviewMiner

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  main.cpp
download_from/: extract_urls.sh
include/: AdvancedMath.cppm  JSONLReader.h  Product.h  Review.h  ReviewProductPair.h  TextUtils.h  TimeUtils.h  Utils.h  YAKE.h
lib/: JSONLReader.cpp  Product.cpp  Review.cpp  ReviewProductPair.cpp  TextUtils.cpp  TimeUtils.cpp  Utils.cpp  YAKE.cpp
tests/: Tests.cpp
